# BeFit24

./: .gitignore  README.md  pyproject.toml  requirement.txt
.virtual_documents/notebooks/: Untitled.ipynb
app/: app.py  app1.py  app2.py  app3.py  config.yaml  requirement.txt
app/data/clean/: clean_data.csv  meal.csv  meal_to_user.csv  user.csv  workout.csv  workout_to_user.csv
data/clean/: clean_data.csv  meal.csv  user.csv
notebooks/: Code_final.ipynb  Untitled.ipynb  code_calculations.ipynb  code_v2.ipynb  creating_tables.ipynb  creating_tables_visuals.ipynb  data_cleaning.ipynb
sql/: Untitled.sql  analysis.sql  drawSQL-mysql-export-2025-10-22.sql  drawSQL-mysql-export-2025-10-23.sql
